# netnet

./: Cargo.toml  build.rs  tmp.cert
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: cargo.yml  rust-clippy.yml
.helix/: languages.toml
ci/: sccache.sh
crates/bluetooth/: Cargo.toml
crates/core/: Cargo.toml  build.rs
crates/core/src/: actor.rs  codec.rs  main.rs  ping.rs
proto/: items.proto  ping.proto
src/: actor.rs  cert.rs  codec.rs  main.rs  node.rs  peers.rs  ping.rs  quic.rs  util.rs  verification.rs
